--- a/elephant-server/pom.xml
+++ b/elephant-server/pom.xml
@@ -68,17 +68,17 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>8</source>
+					<target>8</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.codehaus.plexus</groupId>
-						<artifactId>plexus-compiler-javac</artifactId>
-						<version>1.8</version>
-					</dependency>
-				</dependencies>
+				<!--<dependencies>-->
+					<!--<dependency>-->
+						<!--<groupId>org.codehaus.plexus</groupId>-->
+						<!--<artifactId>plexus-compiler-javac</artifactId>-->
+						<!--<version>1.8</version>-->
+					<!--</dependency>-->
+				<!--</dependencies>-->
 			</plugin>
 
 			<plugin>
